--- a/css/style.css
+++ b/css/style.css
@@ -1,388 +1,416 @@
-@import url('https://fonts.googleapis.com/css2?family=Merienda+One&family=Nunito:wght@200;300;400;500;600&display=swap');
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
-:root{
-    --main-color:#F3E0B5;
-    --black:#333;
-    --white:#fff;
-    --light-color:#666;
-    --border:.2rem solid var(--black);
-    --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
-}
 *{
-    font-family: 'Nunito', sans-serif; 
-    margin: 0; padding:0;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    outline: none; border: none;
-    text-decoration: none;
-    
-}
-
-*::selection{
-    background-color: var(--main-color);
-    color: var(--white);
-}
-
-::-webkit-scrollbar{
-    height: .5rem;
-    width: 1rem;
-}
-
-::-webkit-scrollbar-track{
-    background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb{
-    background-color: var(--main-color);
-}
-
-html{
-    font-size: 62.5%;
-    overflow-x: hidden;
+    scroll-padding-top: 4rem;
     scroll-behavior: smooth;
-    scroll-padding-top: 6rem;
+    list-style: none;
+    text-decoration: none;
 }
 
+/* Variable */
+:root{
+    --main-color: #bc9667;
+    --second-color: #edeae3;
+    --text-color: #1b1b1b;
+    --bg-color: #fff;
+    --box-shadow: 2px 2px 10px 4px rgb(14 54 55/15%)
+
+}
 section{
-    padding: 3rem 2rem;
-    max-width: 1200px;
-    margin: 0 auto;
+    padding: 50px 100px;
 }
-.heading{
-    text-align: center;
-    margin-bottom: 2rem;
+img{
+    width: 100%;
 }
-.heading img{
-    height: 8rem;
-    
+body{
+    color: var(--text-color);
 }
-.heading h3{
-    font-size: 3rem;
-    color: var(--black);
-    font-family: 'Merienda One', cursive;
-}
-
-.btn{
-    display: inline-block;
-    margin-top: 1rem;
-    background-color: var(--main-color);
-    cursor: pointer;
-    color: var(--white);
-    font-size: 1.8rem;
-    padding: 1rem 3rem;
-}
-.btn:hover{
-    background-color: var(--black);
-}
-
-.header{
-    position: sticky;
+header{
+    position: fixed;
+    width: 100%;
     top: 0; left: 0; right: 0;
-    background-color: var(--white);
-    box-shadow: var(--box-shadow);
-    z-index: 1000;
-
-}
-
-.header .flex{
     display: flex;
-    align-items: center;
+    z-index: 1000;
     justify-content: space-between;
-    position: relative;
-    padding: 1.5rem 2rem;
+    align-items: center;
+    padding: 1rem 2rem;
+    transition: 0.5s linear;
+    background: var(--text-color);
 }
-
-.header .flex .logo img{
-    height: 4.5rem;
+header .logo img{
+    height: 4rem;
 }
-
-.header .flex .navbar a{
-    margin-left: 2rem;
-    font-size: 2rem;
-    color: var(--black);
+.navbar{
+    display: flex;
 }
-
-.header .flex .navbar a:hover{
-    text-decoration: underline;
+.navbar a{
+    padding: 1rem 1rem;
+    font-size: 1rem;
+    color: var(--bg-color);
+    text-transform: uppercase;
+    font-weight: 500;
+}
+.navbar a:hover{
+    background-color: var(--main-color);
+    border-radius: 0.2rem;
+    transition: 0.2s all linear;
+}
+header .shadow{
+    background: var(--text-color);
+    box-shadow: var(--box-shadow);
+}
+.header-icon{
+    font-size: 22px;
+    cursor: pointer;
+    z-index: 1000;
+    display: flex;
+    column-gap: 0.8rem;
+}
+.header-icon .bx{
+    color: var(--bg-color);
+}
+.header-icon .bx:hover{
     color: var(--main-color);
 }
-
-#menu-btn{
-    display: none;
-    font-size: 2.5rem;
-    color: var(--black);
+#menu-icon{
+    color: var(--bg-color);
+    font-size: 22px;
+    z-index: 10000;
     cursor: pointer;
+    display: none;
 }
-.home-bg{
-    background:linear-gradient(90deg, var(--white), transparent 70%), url(../images/home.png) no-repeat;
+.search-box{
+    position: absolute;
+    top: -100%;
+    left: 50%;
+    transform: translate(-50%);
+    background-color: var(--bg-color);
+    width: 100%;
+}
+.search-box.active{
+    top: 100%;
+    box-shadow: var(--box-shadow);
+    transition: 0.2s all linear;
+}
+.search-box input{
+    padding: 20px;
+    border: none;
+    outline: none;
+    width: 100%;
+    font-size: 1rem;
+    color: var(--main-color);
+}
+.search-box input::placeholder{
+    font-size: 1rem;
+    font-weight: 500;
+}
+.home{
+    width: 100%;
+    min-height: 100vh;
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-}
-.home-bg .home{
-    min-height: 70rem;
-    display: flex;
+    background-image: url(../images/coff.jpg);
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(17rem, auto));
     align-items: center;
+    gap: 1.5rem;
 }
-.home-bg .home .content{
-    width: 50rem;
-    text-align: center;
+.home-text h1{
+    font-size: 2rem;
+    color: var(--main-color);
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
 }
-.home-bg .home .content h3{
-    font-size: 6rem;
-    color: var(--black);
-    font-family: 'Merienda One', cursive;
-}
-.home-bg .home .content p{
+.home-text p{
+   font-size: 1rem;
+    color: var(--bg-color);
     padding: 1rem 0;
-    font-size: 1.5rem;
-    color: var(--black);
-    line-height: 2;
 }
-
-.about {
+.btn{
+    padding: 10px 40px;
+    border-radius: 0.3rem;
+    background: var(--main-color);
+    color: var(--bg-color);
+    font-weight: 500;
+   
+}
+.home-img img{
+    width: 400px;
+    align-items: center;
+    margin-top: 2rem;
+}
+.btn:hover{
+    background: #8a6f4d;
+    border-radius: 0.2rem;
+    transition: 0.2s all linear;
+}
+.about{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(17rem, auto));
+    align-items: center;
+    gap: 1.5rem;
+}
+.about-img img{
+    border-radius: 0.5rem;
+}
+.about-text h2{
+    font-size: 1.5rem;
+    text-transform: uppercase;
+}
+.about-text p{
+    font-size: 1rem;
+    color: var(--text-color);
+    margin: 0.5rem 0 1.1rem;
+   
+}
+.products-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(280px, auto));
+    align-items: center;
+    gap: 1.5rem;
+    margin-top: 2rem;
+}
+.products-container .box{
+    position: relative;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 0.5rem;
+    box-shadow: var(--box-shadow);
+}
+.products-container img{
+    width: 100%;
+    height: 250px;
+    object-fit: contain;
+    object-position: center;
+    padding: 20px;
+    background: #f1f1f1;
+    border-radius: 0.5rem;
+}
+.products-container .box h3{
+    font-size: 1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin: 0.5rem 0 0.5rem;
+}
+.products-container .box .content{
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
-    gap: 4rem;
+    justify-content: space-around;
 }
-.about .image{
-    flex: 1 1 40rem;
-}
-.about .image img{
-    width: 100%;
-}
-.about .content {
-    flex: 1 1 40rem;
-}
-.about .content h3{
-    font-size: 4.5rem;
-    color: var(--black);
-    font-family: 'Merienda One', cursive;
-    padding-bottom: 1rem;
-}
-.about .content p{
-    padding: 1rem 0;
-    line-height: 2;
-    color: var(--light-color);
-    font-size: 1.5rem;
-}
-
-.facility .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-    gap: 1.5rem;
-    align-items: flex-start;
-}
-.facility .box-container .box{
-    text-align: center;
-}
-.facility .box-container .box img{
-    height: 10rem;
-    margin-bottom: .5rem;
-}
-.facility .box-container .box h3{
-    font-size: 2rem;
-    color: var(--black);
-    margin: 1rem 0;
-}
-.facility .box-container .box p{
-    line-height: 2;
-    font-size: 1.5rem;
-    color: var(--light-color);
-}
-.menu .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-    gap: 1.5rem;
-    align-items: flex-start;
-    justify-content: center;
-}
-.menu .box-container .box{
-    text-align: center;
-}
-.menu .box-container .box img{
-    width: 80%;
-    margin-bottom: 1rem;
-}
-.menu .box-container .box h3{
-    font-size: 2rem;
-    color: var(--black);
-}
-.menu img{
-    height: 100px;
-}
-.gallery .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 33rem);
-    gap: 1rem;
-    justify-content: center;
-    
-}
-.gallery .box-container a{
-    font-size: 2rem;
-    color: var(--black);
-}
-.gallery .box-container img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-.team .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-    gap: 1.5rem;
-    align-items: flex-start;
-}
-.team .box-container .box{
-    text-align: center;
-}
-.team .box-container .box img{
-    width: 100%;
-    margin-bottom: 1rem;
-}
-.team .box-container .box h3{
-    font-size: 2rem;
-    color: var(--black);
-}
-
-.contact .row{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-}
-.contact .row .image{
-    flex: 1 1 50rem;
-}
-.contact .row .image img{
-    width: 100%;
-}
-.contact .row form{
-    flex: 1 1 30rem;
-    border: var(--border);
-    padding: 2rem;
-    text-align: center;
-}
-.contact .row form h3{
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-    color: var(--black);
-}
-.contact .row form .box{
-    width: 100%;
-    padding: 1.4rem;
-    font-size: 1.8rem;
-    color: var(--black);
-    border: var(--border);
-    margin: 1rem 0;
-}
-
-.footer .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-    gap: 1.5rem;
-    align-items: flex-start;
-}
-.footer .box-container .box{
-    text-align: center;
-}
-.footer .box-container .box i{
-    font-size: 2.5rem;
-    line-height: 6rem;
-    height: 6rem;
-    width: 6rem;
-    border-radius: 50%;
+.products-container .box .content span{
+    padding: 0 1rem;
+    color: var(--bg-color);
     background-color: var(--main-color);
-    color: var(--black);
-    margin-bottom: .5rem;
+    border-radius: 4px;
+    font-weight: 500;
 }
-.footer .box-container .box h3{
-    margin: .5rem 0;
-    font-size: 2rem;
-    color: var(--black);
+.products-container .box .content a{
+    padding: 0 1rem;
+    color: var(--text-color);
+    border: 2px solid var(--main-color);
+    border-radius: 4px;
+    font-weight: 500;
+    text-transform: uppercase;
 }
-.footer .box-container .box p{
-    line-height: 2;
-    font-size: 1.6rem;
-    color: var(--light-color);
+.products-container .box .content a:hover{
+    background-color: var(--main-color);
+    color: var(--bg-color);
+    transition: 0.2s all linear;
 }
-
-.footer .credit{
+.customers-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(280px, auto));
+    align-items: center;
+    gap: 1.5rem;
+    margin-top: 2rem;
+}
+.customers-container .box{
+    padding: 20px;
+    box-shadow: var(--box-shadow);
+    border-radius: 0.5rem;
     text-align: center;
-    margin-top: 3rem;
-    padding-top: 2.5rem;
-    border-top: var(--border);
-    font-size: 2rem;
-    color: var(--black);
 }
-.footer .credit span{
+.stars .bx{
     color: var(--main-color);
 }
-
-/* media queries */
-
-@media (max-width:991px){
-
-    html{
-        font-size: 55%;
-    }
+.customers-container .box p{
+    font-size: 1rem;
+}
+.customers-container .box h2{
+    font-size: 1.3rem;
+    font-weight: 500;
+    margin: 0.5 0 0.5;
+}
+.customers-container .box img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.customers-container .box:hover{
+    background: var(--second-color);
+    transition: 0.2s all linear;
+}
+.footer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(240px, auto));
+    gap: 0.2rem;
+}
+.footer-box h2{
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.footer-box p{
+    font-size: 1rem;
+}
+.social{
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+.social .bx{
+    font-size: 24px;
+    color: var(--text-color);
+    padding: 10px;
+    background: var(--second-color);
+    border-radius: 0.2rem;
+}
+.social .bx:hover{
+    background: var(--main-color);
+}
+.footer-box h3{
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.footer-box li a{
+    color: var(--text-color);
+}
+.footer-box li a:hover{
+    color: var(--main-color);
+}
+.contact{
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+}
+.contact span{
+    display: flex;
+    align-items: center;
+}
+.contact i{
+    font-size: 20px;
+    margin-right: 1rem;
+}
+.copyright{
+    padding: 10px;
+    text-align: center;
+    color: var(--text-color);
+    background-color: var(--second-color)
 }
 
 
+
+
+
+
+
+
+
+
+
+@media (max-width:1058px){
+    header{
+        padding: 16px 60px;
+    }
+    section{
+        padding: 50px 60px;
+    }
+    .home-text h1{
+        font-size: 2.4rem;
+    }
+}
+@media (max-width:991px){
+    header{
+        padding: 16px 4%;
+    }
+    section{
+        padding: 50px 4%;
+    }
+    .home-text h1{
+        font-size: 2rem;
+    }
+}
 @media (max-width:768px){
-
-    #menu-btn{
-        display: inline-block;
-        transition: .2s linear;
+    header{
+        padding: 12px 4%;
     }
-
-    #menu-btn.fa-times{
-        transform: rotate(180deg);
+    #menu-icon {
+        display: initial;
     }
-
-    .header .flex .navbar{
+    .navbar{
         position: absolute;
-        top: 99%; left: 0; right: 0;
-        background-color: var(--white);
-        border-top: var(--border);
-        border-bottom: var(--border);
-        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-        transition: .2s linear;
+        top: -578px;
+        left: 0;right: 0;
+        display: flex;
+        flex-direction: column;
+        background: var(--second-color);
+        row-gap: 1.4rem;
+        padding: 20px;
+        transition: 0.3s;
+        text-align: center;
     }
-
-    .header .flex .navbar.active{
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    .navar a{
+        color: var(--text-color);
     }
-
-    .header .flex .navbar a{
-        display: block;
-        margin: 2rem;
+    .navbar a:hover{
+        color: var(--bg-color);
+    }
+    .navbar.active{
+        top: 100%;
+    }
+    .about{
+        align-items: center;
+    }
+}
+@media (max-width:360px){
+    header{
+        padding: 11px 4%;
+    }
+    .logo img{
+        width: 45px;
+    }
+    .home-text{
+        padding-top: 40px;
+    }
+    .home-text p{
+        font-size: 0.8rem;
+        font-weight: 300;
+    }
+    .home-img img{
+        width: 250px;
+        align-items: center;
+    }
+    .about-img{
+        order: 2;
+    }
+    .about-text{
+        text-align: center;
+    }
+    .about-text h2{
+        font-size: 1.2rem;
+    }
+    .heading h2{
+        font-size: 1.2rem;
+        text-align: center;
     }
     
-    .home-bg{
-        background-position: left;
-    }
-    .home-bg .home{
-        justify-content: center;
-    }
-    .home-bg .home .content{
-        font-size: 4rem;
-    }
-    .about .content h3{
-        font-size: 3rem;
-    }
-
-}
-
-@media (max-width:450px){
-
-    html{
-        font-size: 50%;
-    }
-    .heading img{
-        height: 3rem;
-    }
-    .heading h3{
-        font-size: 1rem;
-    }
 }
